src/objects/MM85NAMES__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant firm names</description>
    <fields>
        <fullName>Firm_Profile_Link__c</fullName>
        <label>Firm Profile Link</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Firm Names</relationshipLabel>
        <relationshipName>MMD_Con_Firm_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>Related Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Name Seq #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXT__c</fullName>
        <label>Alternate/Related Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Firm Name</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Firm Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>